nginx-ingress/testing/streaming-application/stream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress
  labels:
    app: streaming-application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /streaming
        pathType: Prefix
        backend:
          service:
            name: streaming-svc
            port:
              number: 80
